Use XF86Back to navigate through library
Currently on Totem 3.34.1 the XF86Forward and XF86Back keys do not trigger an action. As for Firefox, GNOME WEB, Files, Epiphany these keys should allow to navigate in historical order for- and backwards.
Totem should do something similar, namely
- From running movie going back to the main selection menu via XF86Back
- From the main selection menu to the last run movie, preferably when it was left, via XF86Forward
Initially, when there is no previously running movie known, we are necessarily in the main selection menu and XF86Forward should do nothing.
Best
Edited by Bastien Nocera