main: Make XF86Back go back up a level in library

Currently XF86Back key triggers the same action as XF86AudioPrev, which
is seeking previous media in current playlist.

In other GNOME apps like epiphany and nautilus XF86Back is used to
navigate back in the UI, which makes totem behaviour inconsistent.
On the other hand, totem doesn't have a strong spatial navigation
between sections so navigating the playlist is more useful than between
pages.

With that in mind, make it possible to use XF86Back to go back up a
level when in the library.

Fixes https://gitlab.gnome.org/GNOME/totem/-/issues/367